# HDNap

./: CMakeLists.txt
headers/: acquirecamera.h  acquiredatacard.h  camera.h  datacard.h  devicepropertymodel.h  filevalidator.h  global.h  hitbuffer.h  imagebuffer.h  imageitem.h  kdcmotor.h  livedataconsumer.h  liveimageconsumer.h  liveimageprocessor.h  mirrorcontrol.h
src/: acquirecamera.cpp  acquiredatacard.cpp  camera.cpp  datacard.cpp  devicepropertymodel.cpp  filevalidator.cpp  hitbuffer.cpp  imagebuffer.cpp  imageitem.cpp  kdcmotor.cpp  livedataconsumer.cpp  liveimageconsumer.cpp  liveimageprocessor.cpp  main.cpp  mirrorcontrol.cpp
ui/: CameraControl.qml  ControlPanelWindow.qml  DatacardControl.qml  DboxSlider.qml  FileBox.qml  MirrorControl.qml  ViewWindow.qml  ZChartView.qml  main.qml
